tests/errors/match-non-enum.ari
fn main() -> i64 {
  match "value" {
    _ => {
      return 0;
    }
  }
}
